[package]
name = "koharu-renderer"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-core = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
unicode-script = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
font-kit = { workspace = true }
skrifa = { workspace = true }
harfrust = { workspace = true }
icu = { workspace = true }
skia-safe = { workspace = true }
