[package]
name = "koharu-rpc"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-api = { workspace = true }
koharu-http = { workspace = true }
koharu-pipeline = { workspace = true }
koharu-types = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rmcp = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
