[package]
name = "koharu-runtime"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-http = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
libloading = { workspace = true }
num_cpus = { workspace = true }
csv = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["cuda", "cudnn"]
cuda = []
cudnn = []
