[package]
name = "koharu-runtime"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
atomicwrites = { workspace = true }
camino = { workspace = true }
koharu-core = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
inventory = { workspace = true }
keyring = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
libloading = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(windows)'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[dev-dependencies]
tempfile = { workspace = true }
