[package]
name = "koharu-types"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
