[package]
name = "koharu"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
include = [
    "src/**",
    "icons/**",
    "gen/**",
    "tauri.conf.json",
    "tauri.*.conf.json",
    "capabilities/**",
    "build.rs",
    "../ui/out/**",
]

[dependencies]
arc-swap = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
camino = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
directories = { workspace = true }
indexmap = { workspace = true }
koharu-core = { workspace = true }
koharu-ml = { workspace = true }
koharu-psd = { workspace = true }
koharu-renderer = { workspace = true }
koharu-runtime = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
git-version = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
miette = { workspace = true }
open = { workspace = true }
rayon = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
rfd = { workspace = true }
strum = { workspace = true }
tauri = { workspace = true }
tauri-plugin-updater = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
koharu-llm = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-sys = { workspace = true }
winreg = { workspace = true }

[features]
cuda = ["koharu-ml/cuda"]
metal = ["koharu-ml/metal"]

[build-dependencies]
tauri-build = { workspace = true }
