[package]
name = "koharu"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
include = [
    "src/**",
    "icons/**",
    "gen/**",
    "tauri.conf.json",
    "tauri.*.conf.json",
    "capabilities/**",
    "build.rs",
    "../ui/out/**",
]

[dependencies]
koharu-app = { workspace = true }
koharu-core = { workspace = true }
koharu-ml = { workspace = true }
koharu-renderer = { workspace = true }
koharu-rpc = { workspace = true }
koharu-runtime = { workspace = true }
koharu-llm = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
git-version = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
rfd = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-updater = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
console = { workspace = true }
tracing-subscriber = { workspace = true }
sentry = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-sys = { workspace = true }
winreg = { workspace = true }

[features]
cuda = ["koharu-ml/cuda"]
metal = ["koharu-ml/metal"]

[build-dependencies]
tauri-build = { workspace = true }
