[package]
name = "lama"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hf-hub = { workspace = true }
image = { workspace = true }
ort = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
clap = { workspace = true }
