[package]
name = "llm"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
anyhow = { workspace = true }
tokenizers = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }

[features]
cuda = ["candle-core/cuda", "candle-transformers/cuda"]
