[package]
name = "koharu-ai"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[[bin]]
name = "codex"
path = "bin/codex.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
koharu-runtime = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true, features = ["form", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
