[package]
name = "koharu-bindgen"
version.workspace = true
edition.workspace = true
description = "Bindgen-based generator for dynamically loaded native-library bindings."
license = "MIT OR Apache-2.0"
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["bindgen", "ffi", "code-generation", "dynamic-loading", "bindings"]
categories = ["development-tools::ffi", "development-tools::build-utils"]
publish = true

[dependencies]
anyhow = { workspace = true }
bindgen = { workspace = true }
clap = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
