[package]
name = "koharu-config"
version.workspace = true
edition.workspace = true
description = "Extensible typed configuration storage for Koharu."
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
koharu-secrets = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
