[package]
name = "koharu-desktop"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
koharu-canvas = { workspace = true }
koharu-scene = { workspace = true }
pollster = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
wry = { workspace = true }

[dev-dependencies]
image = { workspace = true }
tempfile = { workspace = true }
