[package]
name = "koharu-diffusion-sys"
version.workspace = true
edition.workspace = true
description = "Low-level dynamic bindings for stable-diffusion.cpp."
license = "MIT/Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["stable-diffusion", "diffusion", "ffi", "machine-learning"]
publish.workspace = true
build = "build.rs"

[dependencies]
libloading = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
koharu-bindgen = { workspace = true }
