[package]
name = "koharu-diffusion-sys"
version.workspace = true
edition.workspace = true
description = "Low-level dynamically loaded FFI bindings for stable-diffusion.cpp."
license = "MIT OR Apache-2.0"
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["stable-diffusion", "diffusion", "ffi", "bindings", "machine-learning"]
categories = ["external-ffi-bindings", "science"]
publish = true
build = "build.rs"

[dependencies]
libloading = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
koharu-bindgen = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["libloading"]
